internal/dataplane/parser/testdata/ingress-v1-combined-routes-off/in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: foo
  namespace: foo-namespace
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: foo-svc
                port:
                  number: 80
            path: /
